@@ -288,7 +288,9 @@ argument_list|()
 argument_list|)
 throw|;
 block|}
-return|return
+name|Token
+name|newToken
+init|=
 operator|new
 name|Token
 argument_list|(
@@ -312,6 +314,19 @@ operator|.
 name|type
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|newToken
+operator|.
+name|setPositionIncrement
+argument_list|(
+name|token
+operator|.
+name|getPositionIncrement
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|newToken
 return|;
 block|}
 block|}
