@@ -188,6 +188,120 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testFilterTokens
+specifier|public
+name|void
+name|testFilterTokens
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Token
+name|tok
+init|=
+operator|new
+name|Token
+argument_list|(
+literal|"accents"
+argument_list|,
+literal|2
+argument_list|,
+literal|7
+argument_list|,
+literal|"wrd"
+argument_list|)
+decl_stmt|;
+name|tok
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+name|SnowballFilter
+name|filter
+init|=
+operator|new
+name|SnowballFilter
+argument_list|(
+operator|new
+name|TokenStream
+argument_list|()
+block|{
+specifier|public
+name|Token
+name|next
+parameter_list|()
+block|{
+return|return
+name|tok
+return|;
+block|}
+block|}
+argument_list|,
+literal|"English"
+argument_list|)
+decl_stmt|;
+name|Token
+name|newtok
+init|=
+name|filter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"accent"
+argument_list|,
+name|newtok
+operator|.
+name|termText
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|newtok
+operator|.
+name|startOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|7
+argument_list|,
+name|newtok
+operator|.
+name|endOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"wrd"
+argument_list|,
+name|newtok
+operator|.
+name|type
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|newtok
+operator|.
+name|getPositionIncrement
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
